добавили style.css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
     <title>Shop</title>
 </head>
 
 <body>
-    <header>
-        logo
-        search
-        <button>burger</button>
-        <a href="#">person</a>
-        <a href="#">cart</a>
+    <header class="header">
+        <img src="./img/logo.svg" alt="logo" width="44" height="38">
+        <img src="./img/search.svg" alt="search" width="26" height="27">
+        <button><img src="./img/burger.svg" alt="burger" width="32" height="23"></button>
+        <a href="#"><img src="./img/person.svg" alt="person" width="29" height="29"></a>
+        <a href="#"><img src="./img/cart.svg" alt="cart" width="32" height="29"></a>
         <nav>
             <h2>menu</h2>
             <ul>
