--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">woman</a>
+                    <a class="header__sub-title" href="#">woman</a>
                     <ul>
-                        <li>Accessories</li>
-                        <li>Jackets & Coats</li>
-                        <li>Polos</li>
-                        <li>T-Shirts</li>
-                        <li>Shirts</li>
+                        <li><a href="#" class="header__sub-navigation-link">Accessories</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">Jackets & Coats</a></li>
+                        <li> <a href="#" class="header__sub-navigation-link">Polos</a></li>
+                        <li> <a href="#" class="header__sub-navigation-link">T-Shirts</a></li>
+                        <li> <a href="#" class="header__sub-navigation-link">Shirts</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">kids</a>
+                    <a class="header__sub-title" href="#">kids</a>
                     <ul>
-                        <li>Accessories</li>
-                        <li>Jackets & Coats</li>
-                        <li>Polos</li>
-                        <li>T-Shirts</li>
-                        <li>Shirts</li>
-                        <li>Bags</li>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">Jackets & Coats</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">Polos</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">T-Shirts</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">Shirts</a></li>
+                        <li><a href="#" class="header__sub-navigation-link">Bags</a></li>
                     </ul>
                 </li>
             </ul>
@@ -72,118 +72,158 @@
             </div>
 
         </section>
-        <section class="promotions container">
+        <section class="promotion container">
             <h2 class="visually-hidden">promotions</h2>
             <ul class="promotion__list">
-                <li class="promotion__item">
-                    <h3 class="promotion__title">30 off</h3>
-                    <p>for women</p>
+                <li class="promotion__item promotion__item--woman">
+                    <h3 class="promotion__title">30% off</h3>
+                    <p class="promotion__text">for women</p>
                 </li>
-                <li class="promotion__item">
+                <li class="promotion__item promotion__item--man">
                     <h3 class="promotion__title">hot deal</h3>
-                    <p>for men</p>
+                    <p class="promotion__text">for men</p>
                 </li>
-                <li class="promotion__item">
+                <li class="promotion__item promotion__item--kids">
                     <h3 class="promotion__title">new arrivals</h3>
-                    <p>for kids</p>
+                    <p class="promotion__text">for kids</p>
                 </li>
-                <li class="promotion__item">
+                <li class="promotion__item promotion__item--accesories">
                     <h3 class="promotion__title">luxirous & trendy</h3>
-                    <p>accesories</p>
+                    <p class="promotion__text">accesories</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Fetured Items</h2>
-            <p>Shop for items based on what we featured in this week</p>
-            <ul>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+        <section class="products container">
+            <h2 class="products__title">Fetured Items</h2>
+            <p class="products__text">Shop for items based on what we featured in this week</p>
+            <ul class="products__list">
+                <li class="products__item product">
+                    <img class="product__img" src="./img/man_capsule-1.jpg" alt="man" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+                <li class="products__item product">
+                    <img class="product__img" src="./img/woman_capsule-1.jpg" alt="woman" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+                <li class="products__item product">
+                    <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+                <li class="products__item product">
+                    <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+                <li class="products__item product">
+                    <img src="./img/woman_capsule-2.jpg" alt="woman" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
-                <li>
-                    img
-                    <h3>ellery x m'o capsule</h3>
-                    <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery
-                        teams up with Moda Operandi.</p>
-                    <p>$52.00</p>
-                    <button>Add to cart</button>
+                <li class="products__item product">
+                    <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
+                    <div class="product__description">
+                        <h3 class="product__title">ellery x m'o capsule</h3>
+                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter
+                            of cool Kym Ellery
+                            teams up with Moda Operandi.</p>
+                        <p class="product__price">$52.00</p>
+                        <button type="button" class="product__button">Add to cart</button>
+                    </div>
                 </li>
             </ul>
-            <button>Browse All Product</button>
+            <button type="button" class="products__button">Browse All Product</button>
         </section>
-        <section>
-            <ul>
-                <li>
-                    delivery-img
-                    <h2>Free Delivery</h2>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+        <section class="information information__container">
+            <ul class="information__list">
+                <li class="information__item">
+                    <img class="information__img" src="./img/car.svg" alt="car" width="45" height="32">
+                    <h2 class="information__title">Free Delivery</h2>
+                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                        tion with extensive
                         models.</p>
                 </li>
-                <li>
-                    sales-img
-                    <h2>Sales & discounts</h2>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                <li class="information__item">
+                    <img class="information__img" src="./img/percent.svg" alt="percent" width="40" height="40">
+                    <h2 class="information__title">Sales & discounts</h2>
+                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                        tion with extensive
                         models.</p>
                 </li>
-                <li>
-                    quality-img
-                    <h2>Quality assurance</h2>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                <li class="information__item">
+                    <img class="information__img" src="./img/crown.svg" alt="crown" width="47" height="35">
+                    <h2 class="information__title">Quality assurance</h2>
+                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                        tion with extensive
                         models.</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        img-woman
-        <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-        <h2>subscribe for our newletter and promotion</h2>
-        <input type="email" placeholder="Enter Your Email">
-        <button type="submit">Subscribe</button>
-        <p>© 2021 Brand All Rights Reserved.</p>
-        <ul>
-            <li><a href="#">facebook-img</a></li>
-            <li><a href="#">insta-img</a></li>
-            <li><a href="#">pinterest-img</a></li>
-            <li><a href="#">twitter-img</a></li>
-        </ul>
+        <div class="subscribe">
+            <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
+            <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
+            </p>
+            <h2 class="subscribe__title">subscribe
+                <span class="subscribe__title-new">for our newletter and promotion</span>
+            </h2>
+            <input class="subscribe__send" type="email" placeholder="Enter Your Email">
+            <button class="subscribe__button" type="submit">Subscribe</button>
+        </div>
+        <div class="social">
+            <p class="copy">© 2021 Brand All Rights Reserved.</p>
+            <ul class="social__link">
+                <li class="social__img"><a href="#">
+                        <img src="./img/facebook.svg" alt="facebook" width="32" height="32"></a></li>
+                <li class="social__img"><a href="#">
+                        <img src="./img/insta.svg" alt="insta" width="32" height="32"></a></li>
+                <li class="social__img"><a href="#">
+                        <img src="./img/pinterest.svg" alt="pinterest" width="32" height="32"></a></li>
+                <li class="social__img"><a href="#">
+                        <img src="./img/twitter.svg" alt="twitter" width="32" height="32"></a></li>
+            </ul>
+        </div>
+
     </footer>
 </body>
 
