--- a/index.html
+++ b/index.html
@@ -180,49 +180,57 @@
             </ul>
             <button type="button" class="products__button">Browse All Product</button>
         </section>
-        <section class="information information__container">
-            <ul class="information__list">
-                <li class="information__item">
-                    <img class="information__img" src="./img/car.svg" alt="car" width="45" height="32">
-                    <h2 class="information__title">Free Delivery</h2>
-                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive
-                        models.</p>
-                </li>
-                <li class="information__item">
-                    <img class="information__img" src="./img/percent.svg" alt="percent" width="40" height="40">
-                    <h2 class="information__title">Sales & discounts</h2>
-                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive
-                        models.</p>
-                </li>
-                <li class="information__item">
-                    <img class="information__img" src="./img/crown.svg" alt="crown" width="47" height="35">
-                    <h2 class="information__title">Quality assurance</h2>
-                    <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive
-                        models.</p>
-                </li>
-            </ul>
+        <section class="information">
+            <div class="container information__container">
+                <ul class="information__list">
+                    <li class="information__item">
+                        <img class="information__img" src="./img/car.svg" alt="car">
+                        <h2 class="information__title">Free Delivery</h2>
+                        <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation
+                            innov
+                            tion with extensive
+                            models.</p>
+                    </li>
+                    <li class="information__item">
+                        <img class="information__img" src="./img/percent.svg" alt="percent" width="40" height="40">
+                        <h2 class="information__title">Sales & discounts</h2>
+                        <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation
+                            innov
+                            tion with extensive
+                            models.</p>
+                    </li>
+                    <li class="information__item">
+                        <img class="information__img" src="./img/crown.svg" alt="crown" width="47" height="35">
+                        <h2 class="information__title">Quality assurance</h2>
+                        <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation
+                            innov
+                            tion with extensive
+                            models.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
         <div class="subscribe">
-            <div>
-                <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
-                <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-                    <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
-                </p>
+            <div class="container subscribe__container">
+                <div class="subscribe__citation">
+                    <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
+                    <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                        <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
+                    </p>
+                </div>
+                <div class="subscribe__form">
+                    <h2 class="subscribe__title">subscribe
+                        <span class="subscribe__title-new">for our newletter and promotion</span>
+                    </h2>
+                    <form class="form">
+                        <input class="subscribe__send" type="email" placeholder="Enter Your Email">
+                        <input class="subscribe__button" type="submit" value="Subscribe">
+                    </form>
+                </div>
             </div>
-            <div class="subscribe__form">
-                <h2 class="subscribe__title">subscribe
-                    <span class="subscribe__title-new">for our newletter and promotion</span>
-                </h2>
-                <form>
-                    <input class="subscribe__send" type="email" placeholder="Enter Your Email">
-                    <button class="subscribe__button" type="submit">Subscribe</button>
-                </form>
-            </div>
+
         </div>
         <div class="social">
             <p class="copy">© 2021 Brand All Rights Reserved.</p>
