--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                 <h1 class="brand__title">the brand <span class="brand__sub-title">of luxerious
                         <span class="brand__pink-sub-title">fashion</span></span></h1>
             </div>
-
         </section>
         <section class="promotion container">
             <h2 class="visually-hidden">promotions</h2>
@@ -181,10 +180,10 @@
             <button type="button" class="products__button">Browse All Product</button>
         </section>
         <section class="information">
-            <div class="container information__container">
-                <ul class="information__list">
+                <ul class="information__list ">
                     <li class="information__item">
                         <img class="information__img" src="./img/car.svg" alt="car">
+                        <div></div>
                         <h2 class="information__title">Free Delivery</h2>
                         <p class="information__text">Worldwide delivery on all. Authorit tively morph next-generation
                             innov
@@ -208,12 +207,10 @@
                             models.</p>
                     </li>
                 </ul>
-            </div>
         </section>
     </main>
     <footer>
-        <div class="subscribe">
-            <div class="container subscribe__container">
+        <div class="subscribe subscribe__container">
                 <div class="subscribe__citation">
                     <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
                     <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
@@ -229,8 +226,6 @@
                         <input class="subscribe__button" type="submit" value="Subscribe">
                     </form>
                 </div>
-            </div>
-
         </div>
         <div class="social">
             <p class="copy">© 2021 Brand All Rights Reserved.</p>
