--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <button type="button" class="products__button">Browse All Product</button>
         </section>
         <section class="information">
-                <ul class="information__list ">
+                <ul class="information__list container">
                     <li class="information__item">
                         <img class="information__img" src="./img/car.svg" alt="car">
                         <div></div>
@@ -210,22 +210,24 @@
         </section>
     </main>
     <footer>
-        <div class="subscribe subscribe__container">
-                <div class="subscribe__citation">
-                    <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
-                    <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-                        <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
-                    </p>
-                </div>
-                <div class="subscribe__form">
+        <div class="subscribe">
+                <ul class="subscribe__list">
+                    <li class="subscribe__item">
+                        <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
+                        <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque <br> viverra nunc mi,
+                            <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
+                        </p>
+                    </li>
+                    <li class="subscribe__item">
                     <h2 class="subscribe__title">subscribe
                         <span class="subscribe__title-new">for our newletter and promotion</span>
                     </h2>
-                    <form class="form">
-                        <input class="subscribe__send" type="email" placeholder="Enter Your Email">
-                        <input class="subscribe__button" type="submit" value="Subscribe">
-                    </form>
-                </div>
+                        <form class="form">
+                            <input class="subscribe__send" type="email" placeholder="Enter Your Email">
+                            <input class="subscribe__button" type="submit" value="Subscribe">
+                        </form>
+                    </li>
+                </ul>
         </div>
         <div class="social">
             <p class="copy">© 2021 Brand All Rights Reserved.</p>
