создали второй блок Registration

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </main>
     <footer>
         <div class="subscribe">
-                <ul class="subscribe__list">
+                <ul class="subscribe__list container">
                     <li class="subscribe__item">
                         <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
                         <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque <br> viverra nunc mi,
