стилизация блока main

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                     <h2 class="subscribe__title">subscribe
                         <span class="subscribe__title-new">for our newletter and promotion</span>
                     </h2>
-                        <form class="form">
+                        <form class="subscribe__form">
                             <input class="subscribe__send" type="email" placeholder="Enter Your Email">
-                            <input class="subscribe__button" type="submit" value="Subscribe">
+                            <button type="submit" class="subscribe__button">Subscribe</button>
                         </form>
                     </li>
                 </ul>
