--- a/registration.html
+++ b/registration.html
@@ -93,20 +93,54 @@
                         <p class="loyalty__text">15% off welcome offer</p>
                     </li>
                     <li class="loyalty__item">
-                        <p>Free shipping, returns and exchanges on all orders</p>
+                        <p class="loyalty__text">Free shipping, returns and exchanges on all orders</p>
                     </li>
                     <li class="loyalty__item">
-                        <p>$10 off a purchase on your birthday</p>
+                        <p class="loyalty__text">$10 off a purchase on your birthday</p>
                     </li>
                     <li class="loyalty__item">
-                        <p>Early access to products</p>
+                        <p class="loyalty__text">Early access to products</p>
                     </li>
                     <li class="loyalty__item">
-                        <p>Exclusive offers & rewards</p>
+                        <p class="loyalty__text">Exclusive offers & rewards</p>
                     </li>
                 </ul>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="subscribe">
+                <ul class="subscribe__list container">
+                    <li class="subscribe__item">
+                        <img class="subscribe__img" src="./img/woman_subscribe.jpg" alt="woman" width="145" height="151">
+                        <p class="subscribe__text">“Vestibulum quis porttitor dui! Quisque <br> viverra nunc mi,
+                            <span class="subscribe__text-italic">a pulvinar purus condimentum“</span>
+                        </p>
+                    </li>
+                    <li class="subscribe__item">
+                    <h2 class="subscribe__title">subscribe
+                        <span class="subscribe__title-new">for our newletter and promotion</span>
+                    </h2>
+                        <form class="subscribe__form">
+                            <input class="subscribe__send" type="email" placeholder="Enter Your Email">
+                            <button type="submit" class="subscribe__button">Subscribe</button>
+                        </form>
+                    </li>
+                </ul>
+        </div>
+        <div class="social">
+            <p class="copy">© 2021 Brand All Rights Reserved.</p>
+            <ul class="social__list">
+                <li class="social__item"><a class="social__link" href="#" target="_blank">
+                        <img src="./img/facebook.svg" alt="facebook" width="32" height="32"></a></li>
+                <li class="social__item"><a class="social__link" href="#" target="_blank">
+                        <img src="./img/insta.svg" alt="instagram" width="32" height="32"></a></li>
+                <li class="social__item"><a class="social__link" href="#" target="_blank">
+                        <img src="./img/pinterest.svg" alt="pinterest" width="32" height="32"></a></li>
+                <li class="social__item"><a class="social__link" href="#" target="_blank">
+                        <img src="./img/twitter.svg" alt="twitter" width="32" height="32"></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
