добавили эффект кнопке Browse All Product

--- a/registration.html
+++ b/registration.html
@@ -65,17 +65,17 @@
         <div class="registration">
             <h1 class="registration__title container">Registration</h1>
         </div>
-        <div class="filling__form">
-            <form action=" " class="form container">
+        <div class="filling__form container">
+            <form action=" " class="form">
                 <fieldset class="form__list">
                     <legend class="form__title">Your Name</legend>
                     <input class="form__field" type="text" placeholder="First Name">
                     <input class="form__field" type="text" placeholder="Last Name">
                     <div class="form__choice">
                         <input class="form__radio" type="radio">
-                        <label class="form__label" for="ie">Male</label>
+                        <label class="form__label" for="male">Male</label>
                         <input class="form__radio" type="radio">
-                        <label class="form__label" for="ie">Female</label>
+                        <label class="form__label" for="female">Female</label>
                     </div>
                     <legend class="form__title">Login details</legend>
                     <input class="form__field" type="email" placeholder="Email">
@@ -86,7 +86,7 @@
                     </a>
                 </fieldset>
             </form>
-            <div class="loyalty container">
+            <div class="loyalty">
                 <h2 class="loyalty__title">loyalty has its perks</h2>
                 <ul class="loyalty__list">Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:
                     <li class="loyalty__item">
