--- a/index.html
+++ b/index.html
@@ -107,73 +107,115 @@
             </div>
             <ul class="products__list">
                 <li class="products__item product">
-                    <img class="product__img" src="./img/man_capsule-1.jpg" alt="man" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img class="product__img" src="./img/man_capsule-1.jpg" alt="man" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
                 <li class="products__item product">
-                    <img class="product__img" src="./img/woman_capsule-1.jpg" alt="woman" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img class="product__img" src="./img/woman_capsule-1.jpg" alt="woman" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter
+                                of cool Kym Ellery
+                                teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
                 <li class="products__item product">
-                    <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter
+                                of cool Kym Ellery
+                                teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
                 <li class="products__item product">
-                    <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter
+                                of cool Kym Ellery
+                                teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
                 <li class="products__item product">
-                    <img src="./img/woman_capsule-2.jpg" alt="woman" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img src="./img/woman_capsule-2.jpg" alt="woman" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter
+                                of cool Kym Ellery
+                                teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
                 <li class="products__item product">
-                    <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
-                    <div class="product__description">
-                        <h3 class="product__title">ellery x m'o capsule</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
-                        <button type="button" class="product__button">Add to cart</button>
+                    <div class="product__wrapper">
+                        <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter
+                                of cool Kym Ellery
+                                teams up with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                            <div class="overlay">
+                                <button type="button" class="product__button">
+                                    <img src="./img/cart.svg" alt="cart">
+                                    Add to cart
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </li>
             </ul>
