--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container header__container">
             <div>
-                <img class="header__logo" src="./img/logo.svg" alt="logo" width="44" height="38">
+                <a href="index.html"><img class="header__logo" src="./img/logo.svg" alt="logo" width="44" height="38"></a>
                 <img src="./img/search.svg" alt="search" width="26" height="27">
             </div>
             <div>
