сделали адаптив index.html

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </ul>
         </div>
         <div class="social">
-            <p class="copy">© 2021 Brand All Rights Reserved.</p>
+            <p class="copy"><span class="copy__space">© 2021 Brand</span> All Rights Reserved.</p>
             <ul class="social__list">
                 <li class="social__item"><a class="social__link" href="#" target="_blank">
                         <svg class="social__item-icon facebook" width="9" height="15" viewBox="0 0 9 15">
