--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </div>
                 </li>
             </ul>
-            <button type="button" class="products__button">Browse All Product</button>
+            <a class="products__button" href="./product.html">Browse All Product</a>         
         </section>
         <section class="information">
             <ul class="information__list container">
