доделали карточку товара в cart.html

--- a/product.html
+++ b/product.html
@@ -143,7 +143,6 @@
                     Add to cart
                 </button>
             </div>
-            
         </section>
         <section class="description container">
             <ul class="description__list">
@@ -160,7 +159,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="description__item">
+                <li class="description__item description__item-mobile">
                     <div class="description__wrapper">
                         <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
                         <div class="description__commodity">
@@ -173,7 +172,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="description__item">
+                <li class="description__item description__item-tablet">
                     <div class="description__wrapper">
                         <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
                         <div class="description__commodity">
