редактировали product.html блок с товаром

--- a/product.html
+++ b/product.html
@@ -144,44 +144,44 @@
                 </button>
             </div>
         </section>
-        <section class="description container">
-            <ul class="description__list">
-                <li class="description__item">
-                    <div class="description__wrapper">
+        <section class="products container">
+            <ul class="products__list">
+                <li class="products__item product">
+                    <div class="product__wrapper">
                         <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
-                        <div class="description__commodity">
-                            <h3 class="description__title">ellery x m'o capsule</h3>
-                            <p class="description__text">Known for her sculptural takes on traditional tailoring, Australian
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="description__price">$52.00</p>
+                            <p class="product__price">$52.00</p>
                         </div>
                     </div>
                 </li>
-                <li class="description__item description__item-mobile">
-                    <div class="description__wrapper">
+                <li class="products__item product">
+                    <div class="product__wrapper">
                         <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
-                        <div class="description__commodity">
-                            <h3 class="description__title">ellery x m'o capsule</h3>
-                            <p class="description__text">Known for her sculptural takes on traditional tailoring, Australian
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="description__price">$52.00</p>
+                            <p class="product__price">$52.00</p>
                         </div>
                     </div>
                 </li>
-                <li class="description__item description__item-tablet">
-                    <div class="description__wrapper">
+                <li class="products__item product">
+                    <div class="product__wrapper">
                         <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
-                        <div class="description__commodity">
-                            <h3 class="description__title">ellery x m'o capsule</h3>
-                            <p class="description__text">Known for her sculptural takes on traditional tailoring, Australian
+                        <div class="product__description">
+                            <h3 class="product__title">ellery x m'o capsule</h3>
+                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="description__price">$52.00</p>
+                            <p class="product__price">$52.00</p>
                         </div>
                     </div>
                 </li>                         
