в catalog.html добавили блоки с товарами, информацией и footer

--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img class='carousel-img' src="./img/woman_product.jpg" class="d-block w-100" alt="woman" width="597" height="724">
+                    <img class='carousel-img' src="./img/product_woman.jpg" class="d-block w-100" alt="woman">
                     </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"><svg class="carousel-control-prev-icon" width="13" height="23" viewBox="0 0 13 23" xmlns="http://www.w3.org/2000/svg">
@@ -148,7 +148,9 @@
             <ul class="products__list">
                 <li class="products__item product">
                     <div class="product__wrapper">
-                        <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
+                        <a href="./catalog.html">
+                            <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
+                        </a>
                         <div class="product__description">
                             <h3 class="product__title">ellery x m'o capsule</h3>
                             <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -159,9 +161,11 @@
                         </div>
                     </div>
                 </li>
-                <li class="products__item product">
+                <li class="products__item product product__mobile">
                     <div class="product__wrapper">
-                        <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
+                        <a href="./catalog.html">
+                            <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
+                        </a>
                         <div class="product__description">
                             <h3 class="product__title">ellery x m'o capsule</h3>
                             <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
@@ -172,9 +176,9 @@
                         </div>
                     </div>
                 </li>
-                <li class="products__item product">
+                <li class="products__item product product__tablet">
                     <div class="product__wrapper">
-                        <img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420">
+                        <a href="./catalog.html"><img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420"></a>
                         <div class="product__description">
                             <h3 class="product__title">ellery x m'o capsule</h3>
                             <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
